    authentication) (closes MS #2688)
  * Add "openpgp4fpr" pkc type for providing OpenPGP v4 fingerprint
  * Add --version option to msva-query-agent

  [ David Bremner ]
  * Code refactoring:
   - Crypt::Monkeysphere::MSVA::Logger into Crypt::Monkeysphere::Logger
   - new Crypt::Monkeysphere::Validator
   - unit tests and unit test harness

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Thu, 10 Mar 2011 00:58:11 -0500

msva-perl (0.8) upstream;

  * Minor bugfix release!
  * Avoid indirect object creation (thanks to intrigeri for pointing this out).
  * Bug fix for unused option provided to gpgkeys_hkpms.
  * Allow use of hkpms keyservers from gpg.conf
  * Allow the use of ports in hostnames (closes MS # 2665)
  * Do not report self-sigs as other certifiers (but report valid,
    non-matching identities independently) (closes MS # 2569)
  * List certifiers only once (closes MS # 2573)
  * Enable the use of --keyserver-options http-proxy for gpgkeys_hkpms
    (includes support for socks proxies) (closes MS # 2677)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Mon, 20 Dec 2010 04:04:15 -0500

msva-perl (0.7) upstream;

  * udpated msva-query-agent documentation
  * added gpgkeys_hkpms for monkeysphere-authenticated HKPS access
    (closes MS #2016)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 07 Dec 2010 21:34:23 -0500

msva-perl (0.6) upstream;

  * Add new element to JSON syntax allowing request to override
    keyserver_policy (closes MS #2542)
  * Do not kill off child handling processes on HUP -- let them finish
    their queries.
  * Refactor logging code
  * If we have Gtk2, Linux::Inotify2, and AnyEvent, we should monitor for
    updates and prompt the user when we notice one. (closes MS #2540)
  * Added tests/basic, as a simple test of a few functions (closes MS #2537)
  * fixed double-prompting on sites that have more than one User ID
    (closes MS #2567)
  * report server implementation name and version with every query (closes