@@ -12,7 +12,10 @@ msva-perl (0.9~pre) upstream;
    - new Crypt::Monkeysphere::Validator
    - unit tests and unit test harness
 
- -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Thu, 10 Mar 2011 00:58:11 -0500
+  [ Daniel Kahn Gillmor ]
+  * now depending on Crypt::X509 0.50 for pubkey components directly.
+
+ -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Fri, 11 Mar 2011 01:24:55 -0500
 
 msva-perl (0.8) upstream;
 
